--- a/bin/Log.htm
+++ b/bin/Log.htm
@@ -2,63 +2,13 @@
 <meta http-equiv='Content-Type' content='text/html; charset=utf-8'><title>Log File</title>
 </head><body bgcolor='cornsilk'>
 <b><font face='Verdana' size='3' color='DarkBlue'>Log file</font></b><br/>
-<font face='Verdana' size='1' color='Orange'>&lt;29.09.2015 - 00:13:38&gt; error while reading 'GfxFileInfo.xml': file not found: GfxFileInfo.xml</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:38&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:38&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:48&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:13:52&gt; Textures pow2: false conditional non-pow2: false</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:39:47&gt; Image adot scaled from 64x64 to 32x32</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:39:47&gt; Image drops scaled from 128x128 to 59x59</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:41:29&gt; Image adot scaled from 64x64 to 32x32</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:41:29&gt; Image drops scaled from 128x128 to 59x59</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:48:14&gt; Image adot scaled from 64x64 to 32x32</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 00:48:14&gt; Image drops scaled from 128x128 to 59x59</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 01:32:44&gt; Image adot scaled from 64x64 to 32x32</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 01:32:44&gt; Image drops scaled from 128x128 to 59x59</font><br/>
-<font face='Verdana' size='1' color='Orange'>&lt;29.09.2015 - 01:40:15&gt; can't find file &quot;./base_p/particle&quot;</font><br/>
-<font face='Verdana' size='1' color='Orange'>&lt;29.09.2015 - 01:40:16&gt; can't find file &quot;./base_p/particle&quot;</font><br/>
-<font face='Verdana' size='1' color='Orange'>&lt;29.09.2015 - 01:40:16&gt; can't find file &quot;./base_p/particle&quot;</font><br/>
-<font face='Verdana' size='1' color='Orange'>&lt;29.09.2015 - 01:40:24&gt; can't find file &quot;./base_p/particle&quot;</font><br/>
-<font face='Verdana' size='1' color='Orange'>&lt;29.09.2015 - 01:53:34&gt; can't find file &quot;./base_p/particle&quot;</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;29.09.2015 - 02:02:55&gt; Image adot scaled from 64x64 to 24x24</font><br/>
-</body></html>
+<font face='Verdana' size='1' color='Orange'>&lt;30.09.2015 - 16:52:25&gt; error while reading 'GfxFileInfo.xml': file not found: GfxFileInfo.xml</font><br/>
+<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 16:52:25&gt; Textures pow2: false conditional non-pow2: false</font><br/>
+<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 16:52:25&gt; Textures pow2: false conditional non-pow2: false</font><br/>
+<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 16:54:08&gt; Image star scaled from 64x64 to 19x19</font><br/>
+<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 16:58:22&gt; Image star scaled from 64x64 to 37x37</font><br/>
+<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 17:09:24&gt; Image star scaled from 64x64 to 37x37</font><br/>
+<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 17:11:02&gt; Image star scaled from 64x64 to 37x37</font><br/>
+<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 17:36:49&gt; Image adot scaled from 64x64 to 59x59</font><br/>
+<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 17:36:49&gt; Image drops scaled from 128x128 to 59x59</font><br/>
+<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 17:41:57&gt; Image adot scaled from 64x64 to 59x59</font><br/>
