--- a/bin/Log.htm
+++ b/bin/Log.htm
@@ -12,3 +12,4 @@
 <font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 17:36:49&gt; Image adot scaled from 64x64 to 59x59</font><br/>
 <font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 17:36:49&gt; Image drops scaled from 128x128 to 59x59</font><br/>
 <font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 17:41:57&gt; Image adot scaled from 64x64 to 59x59</font><br/>
+</body></html>
