--- a/bin/write_directory/log.htm
+++ b/bin/write_directory/log.htm
@@ -2,29 +2,29 @@
 <meta http-equiv='Content-Type' content='text/html; charset=utf-8'><title>Log File</title>
 </head><body bgcolor='cornsilk'>
 <b><font face='Verdana' size='3' color='DarkBlue'>Log file</font></b><br/>
-<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 17:50:57&gt; EGL vendor: Google Inc. (adapter LUID: 0000000000008d8c)</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 17:50:57&gt; EGL version: 1.4 (ANGLE 2.1.unknown hash)</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 17:50:57&gt; EGL client API: OpenGL_ES</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 17:50:57&gt; EGL extensions: EGL_EXT_create_context_robustness EGL_ANGLE_d3d_share_handle_client_buffer EGL_ANGLE_surface_d3d_texture_2d_share_handle EGL_ANGLE_query_surface_pointer EGL_ANGLE_window_fixed_size EGL_NV_post_sub_buffer EGL_KHR_create_context </font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 17:50:57&gt; GL vendor: Google Inc.</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 17:50:57&gt; GL renderer: ANGLE (NVIDIA GeForce GTX 550 Ti Direct3D9Ex vs_3_0 ps_3_0)</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 17:50:57&gt; GL version: OpenGL ES 2.0 (ANGLE 2.1.unknown hash)</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 17:50:57&gt; GL shader version: OpenGL ES GLSL ES 1.00 (ANGLE 2.1.unknown hash)</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 17:50:57&gt; GL extensions: GL_OES_element_index_uint GL_OES_packed_depth_stencil GL_OES_get_program_binary GL_OES_rgb8_rgba8 GL_EXT_texture_format_BGRA8888 GL_EXT_read_format_bgra GL_OES_texture_half_float GL_OES_texture_half_float_linear GL_OES_texture_float GL_OES_texture_float_linear GL_EXT_texture_rg GL_EXT_texture_compression_dxt1 GL_ANGLE_texture_compression_dxt3 GL_ANGLE_texture_compression_dxt5 GL_ANGLE_depth_texture GL_EXT_texture_storage GL_OES_texture_npot GL_EXT_texture_filter_anisotropic GL_EXT_occlusion_query_boolean GL_NV_fence GL_EXT_robustness GL_EXT_blend_minmax GL_ANGLE_framebuffer_blit GL_ANGLE_framebuffer_multisample GL_ANGLE_instanced_arrays GL_ANGLE_pack_reverse_row_order GL_OES_standard_derivatives GL_EXT_shader_texture_lod GL_EXT_frag_depth GL_ANGLE_texture_usage GL_ANGLE_translated_shader_source </font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 17:50:57&gt; Application started!</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 17:50:57&gt; ALC devices: Generic Software</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 17:50:57&gt; ALC default device: Generic Software</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 17:50:57&gt; ALC extensions: ALC_ENUMERATE_ALL_EXT ALC_ENUMERATION_EXT ALC_EXT_CAPTURE ALC_EXT_EFX</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 17:50:57&gt; Starting audio update thread...</font><br/>
-<font face='Verdana' size='1' color='DarkGrey'>&lt;30.09.2015 - 17:50:57&gt; Loading Resources.xml time = 0.036003</font><br/>
-<font face='Verdana' size='1' color='DarkGrey'>&lt;30.09.2015 - 17:50:58&gt; Loading effects/Shadow.xml time = 0.0207184</font><br/>
-<font face='Verdana' size='1' color='DarkGrey'>&lt;30.09.2015 - 17:50:58&gt; Loading effects/Trail.xml time = 0.0161622</font><br/>
-<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 17:50:58&gt; Loading Layers.xml</font><br/>
-<font face='Verdana' size='1' color='DarkGrey'>&lt;30.09.2015 - 17:50:58&gt; Loading layers from Layers.xml, time = 0.0181581</font><br/>
-<font face='Verdana' size='1' color='DarkGrey'>&lt;30.09.2015 - 17:50:58&gt; [Font] Attempt to load: Sansation system=0</font><br/>
-<font face='Verdana' size='1' color='DarkGrey'>&lt;30.09.2015 - 17:50:58&gt; [Font] Attempt to load: arial system=0</font><br/>
-<font face='Verdana' size='1' color='Orange'>&lt;30.09.2015 - 17:50:58&gt; Audio 'sounds/bgm1019.ogg' is not loaded! Loading...</font><br/>
-<font face='Verdana' size='1' color='Orange'>&lt;30.09.2015 - 17:50:58&gt; Bind without BeginUse texture path=textures/Particles/star, id=textures/Particles/star</font><br/>
-<font face='Verdana' size='1' color='Orange'>&lt;30.09.2015 - 17:51:02&gt; Audio 'sounds/hide_in.ogg' is not loaded! Loading...</font><br/>
-<font face='Verdana' size='1' color='Orange'>&lt;30.09.2015 - 17:51:02&gt; Audio 'sounds/scream_01.ogg' is not loaded! Loading...</font><br/>
-<font face='Verdana' size='1' color='Orange'>&lt;30.09.2015 - 17:51:02&gt; Bind without BeginUse texture path=textures/Particles/adot, id=textures/Particles/adot</font><br/>
+<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 18:02:40&gt; EGL vendor: Google Inc. (adapter LUID: 0000000000008d8c)</font><br/>
+<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 18:02:40&gt; EGL version: 1.4 (ANGLE 2.1.unknown hash)</font><br/>
+<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 18:02:40&gt; EGL client API: OpenGL_ES</font><br/>
+<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 18:02:40&gt; EGL extensions: EGL_EXT_create_context_robustness EGL_ANGLE_d3d_share_handle_client_buffer EGL_ANGLE_surface_d3d_texture_2d_share_handle EGL_ANGLE_query_surface_pointer EGL_ANGLE_window_fixed_size EGL_NV_post_sub_buffer EGL_KHR_create_context </font><br/>
+<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 18:02:40&gt; GL vendor: Google Inc.</font><br/>
+<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 18:02:40&gt; GL renderer: ANGLE (NVIDIA GeForce GTX 550 Ti Direct3D9Ex vs_3_0 ps_3_0)</font><br/>
+<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 18:02:40&gt; GL version: OpenGL ES 2.0 (ANGLE 2.1.unknown hash)</font><br/>
+<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 18:02:40&gt; GL shader version: OpenGL ES GLSL ES 1.00 (ANGLE 2.1.unknown hash)</font><br/>
+<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 18:02:40&gt; GL extensions: GL_OES_element_index_uint GL_OES_packed_depth_stencil GL_OES_get_program_binary GL_OES_rgb8_rgba8 GL_EXT_texture_format_BGRA8888 GL_EXT_read_format_bgra GL_OES_texture_half_float GL_OES_texture_half_float_linear GL_OES_texture_float GL_OES_texture_float_linear GL_EXT_texture_rg GL_EXT_texture_compression_dxt1 GL_ANGLE_texture_compression_dxt3 GL_ANGLE_texture_compression_dxt5 GL_ANGLE_depth_texture GL_EXT_texture_storage GL_OES_texture_npot GL_EXT_texture_filter_anisotropic GL_EXT_occlusion_query_boolean GL_NV_fence GL_EXT_robustness GL_EXT_blend_minmax GL_ANGLE_framebuffer_blit GL_ANGLE_framebuffer_multisample GL_ANGLE_instanced_arrays GL_ANGLE_pack_reverse_row_order GL_OES_standard_derivatives GL_EXT_shader_texture_lod GL_EXT_frag_depth GL_ANGLE_texture_usage GL_ANGLE_translated_shader_source </font><br/>
+<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 18:02:40&gt; Application started!</font><br/>
+<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 18:02:40&gt; ALC devices: Generic Software</font><br/>
+<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 18:02:40&gt; ALC default device: Generic Software</font><br/>
+<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 18:02:40&gt; ALC extensions: ALC_ENUMERATE_ALL_EXT ALC_ENUMERATION_EXT ALC_EXT_CAPTURE ALC_EXT_EFX</font><br/>
+<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 18:02:40&gt; Starting audio update thread...</font><br/>
+<font face='Verdana' size='1' color='DarkGrey'>&lt;30.09.2015 - 18:02:40&gt; Loading Resources.xml time = 0.0363894</font><br/>
+<font face='Verdana' size='1' color='DarkGrey'>&lt;30.09.2015 - 18:02:40&gt; Loading effects/Shadow.xml time = 0.0206034</font><br/>
+<font face='Verdana' size='1' color='DarkGrey'>&lt;30.09.2015 - 18:02:40&gt; Loading effects/Trail.xml time = 0.0157499</font><br/>
+<font face='Verdana' size='1' color='Green'>&lt;30.09.2015 - 18:02:40&gt; Loading Layers.xml</font><br/>
+<font face='Verdana' size='1' color='DarkGrey'>&lt;30.09.2015 - 18:02:40&gt; Loading layers from Layers.xml, time = 0.0185581</font><br/>
+<font face='Verdana' size='1' color='DarkGrey'>&lt;30.09.2015 - 18:02:40&gt; [Font] Attempt to load: Sansation system=0</font><br/>
+<font face='Verdana' size='1' color='DarkGrey'>&lt;30.09.2015 - 18:02:40&gt; [Font] Attempt to load: arial system=0</font><br/>
+<font face='Verdana' size='1' color='Orange'>&lt;30.09.2015 - 18:02:41&gt; Audio 'sounds/bgm1019.ogg' is not loaded! Loading...</font><br/>
+<font face='Verdana' size='1' color='Orange'>&lt;30.09.2015 - 18:02:41&gt; Bind without BeginUse texture path=textures/Particles/star, id=textures/Particles/star</font><br/>
+<font face='Verdana' size='1' color='Orange'>&lt;30.09.2015 - 18:02:42&gt; Audio 'sounds/hide_in.ogg' is not loaded! Loading...</font><br/>
+<font face='Verdana' size='1' color='Orange'>&lt;30.09.2015 - 18:02:42&gt; Audio 'sounds/scream_01.ogg' is not loaded! Loading...</font><br/>
+<font face='Verdana' size='1' color='Orange'>&lt;30.09.2015 - 18:02:42&gt; Bind without BeginUse texture path=textures/Particles/adot, id=textures/Particles/adot</font><br/>
